<resources>
    <string name="app_name">DesignPatternDemo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_demo_test">Hello world</string>
    <string name="title_demo_singleton">Demo singleton pattern</string>
    <string name="title_demo_factory">Demo factory pattern</string>
    <string name="title_demo_abstract_factory">Demo abstract factory pattern</string>
    <string name="title_demo_template">Demo template method pattern</string>
    <string name="title_demo_builder">Demo builder pattern</string>
    <string name="title_demo_proxy">Demo proxy pattern</string>
    <string name="title_demo_prototype">Demo prototype pattern</string>
    <string name="title_demo_mediator">Demo mediator pattern</string>
    <string name="title_demo_command">Demo command pattern</string>
    <string name="title_demo_chain_of_responsibility">Demo chain of responsibility pattern</string>
    <string name="title_demo_decorator">Demo decorator pattern</string>
    <string name="title_demo_strategy">Demo strategy pattern</string>
    <string name="title_demo_adapter">Demo adapter pattern</string>
    <string name="title_demo_iterator">Demo iterator pattern</string>
    <string name="title_demo_composite">Demo composite pattern</string>
    <string name="title_demo_observer">Demo observer pattern</string>
    <string name="title_demo_facade">Demo facade pattern</string>
    <string name="title_demo_memento">Demo memento pattern</string>
    <string name="title_demo_visitor">Demo visitor pattern</string>
    <string name="title_demo_state">Demo state pattern</string>
    <string name="title_demo_interpreter">Demo interpreter pattern</string>
    <string name="title_demo_flyweight">Demo flyweight pattern</string>
    <string name="title_demo_bridge">Demo bridge pattern</string>
    <string name="tv_welcome_to_demo">Welcome to demo design pattern</string>
    <string name="tv_no_data">No item</string>
    <string name="toast_error_occurred_while_parsing_itemdata_xml">Error occurred while parsing itemData.xml</string>
    <string name="demo_singleton_instruction">Singleton is a design pattern that ensures that only one entity in the world is available. \n\nWe will show its effect shortly.</string>
    <string name="btn_start_singleton">Start</string>
    <string name="btn_get_singleton_object">Get Singleton object</string>
    <string name="title_activity_demo_singleton_main">Demo singleton pattern</string>
    <string name="singleton_result_init_1">Each time the button is pressed, Singleton.getInstance() is called\n</string>
    <string name="singleton_result_init_2">Let\'s see if the ID changes?\n\n</string>
    <string name="singleton_result_log_1">"Generate a singleton object! "</string>
    <string name="demo_factory_instruction">Factory Pattern\n\nProvides a way to create objects without specifying the exact class of object that will be created.\n\nIn this demo, we will create different types of characters using a factory.</string>
    <string name="btn_start_factory">Start</string>
    <string name="btn_factory_create_character">Create Character</string>
    <string name="btn_back_to_main_list">Back to Main List</string>
    <string name="title_activity_demo_factory_main">Demo factory pattern</string>
    <string name="factory_result_character">"Character: "</string>
    <string name="factory_result_special_ability">"Special Ability: "</string>
    <string name="demo_abstract_factory_instruction">Abstract Factory Pattern provides an interface for creating families of related or dependent objects without specifying their concrete classes.</string>
    <string name="btn_start_abstract_factory">Start</string>
    <string name="title_abstract_factory">Demo abstract factory pattern</string>
    <string name="btn_generate_components">Generate Components</string>
    <string name="toast_error_no_item_selected">No item select!!!</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="toast_error_bit_flip">Bit flip!!!</string>
    <string name="abstract_factory_result_button">"Button: "</string>
    <string name="abstract_factory_result_text">"Text: "</string>
    <string name="btn_builder_create_computer">Create Computer</string>
    <string name="demo_builder_result_init_info">Result will be shown here.</string>
    <string name="cb_demo_builder_add_cpu">Add CPU</string>
    <string name="cb_demo_builder_add_ram">Add RAM</string>
    <string name="cb_demo_builder_add_storage">Add Storage</string>
    <string name="cb_demo_builder_add_gpu">Add GPU</string>
    <string name="demo_decorator_chb_add_milk">Add Milk</string>
    <string name="demo_decorator_chb_add_sugar">Add Sugar</string>
    <string name="demo_decorator_chb_add_vanilla">Add Vanilla</string>
    <string name="demo_decorator_btn_make_coffee">Make Coffee</string>
    <string name="demo_iterator_btn_show_items">Show Items</string>
    <string name="demo_iterator_tv_items_will_be_listed_here">Items will be listed here...</string>
    <string name="demo_observer_et_hint_enter_temperature">Enter temperature</string>
    <string name="demo_observer_btn_update_temperature">Update Temperature</string>
    <string name="demo_observer_tv_observer_1">Observer 1: -- %1$s</string>
    <string name="demo_observer_tv_observer_2">Observer 2: -- %1$s</string>
    <string name="demo_memento_et_hint_enter_text">Enter text...</string>
    <string name="demo_memento_btn_save">Save</string>
    <string name="demo_memento_btn_undo">Undo</string>
    <string name="demo_memento_tv_state_log_will_show_here">State log will show here.</string>
</resources>